fix alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ nav a {
   font-family: monospace;
   font-size: 16px;
   text-decoration: none;
-  padding: 12.5px 3%;
+  padding: 10px 3%;
+  align-items: center;
 }
 
 nav a:hover {
